# FFmpegWrapper

./: CMakeLists.txt  README.md  ffdecoder.cpp  ffdecoder.h  ffmpeg.h  ffwrapper.cpp
include/: ffmpegwrapper.h  pch.h
